crates/batuta-tui/tests/snapshots/render__ut_732_attention_dark_90x30.snap
---
source: crates/batuta-tui/tests/render.rs
expression: output
---
batuta · batuta-cli · sess-807cee9774b33f68 · batuta · "Analisar e implementar …" · active
──────────────────────────────────────────────────────────────────────────────────────────
beginning of transcript
▸ batuta
  A confirmation is required before deleting the cache.
  ▪ approval  request req-confirm  turn turn-confirm
    Delete the build cache · /tmp/cache
    a allow once · A allow always · x reject once · X reject always




















──────────────────────────────────────────────────────────────────────────────────────────
j/k move  Enter expand  t reasoning  D raw debug  G newest  g oldest  q quit          live
